@@ -91,6 +91,7 @@ tasks.withType<Test> {
     maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2)
     forkEvery = 100L
     jvmArgs = listOf(
+        "--enable-preview",
         "-Xmx4g",
         "-Dlogging.level.root=ERROR",
         "-Dlogging.level.sgc=ERROR",
@@ -254,6 +255,7 @@ tasks.withType<JavaCompile> {
         isIncremental = true
         isFork = true
         encoding = "UTF-8"
+        compilerArgs.add("--enable-preview")
     }
 }
 
@@ -308,7 +310,7 @@ tasks.register<Test>("verboseTest") {
 }
 
 tasks.named<org.springframework.boot.gradle.tasks.run.BootRun>("bootRun") {
-    jvmArgs = listOf("-Djdk.internal.vm.debug=release")
+    jvmArgs = listOf("--enable-preview")
 }
 
 tasks.register<org.springframework.boot.gradle.tasks.run.BootRun>("bootRunE2E") {
